# solend-apy-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  crontab
readme/: diagram.drawio
src/: apy.rs  bot.rs  db.rs  main.rs  stats.rs
src/assets/: cli.yml  devnet.json  production.json
src/utils/: config.rs  mod.rs  models.rs  reward_stats.rs
web/: package-lock.json  package.json  vue.config.js
web/public/: index.html
web/src/components/: ChartContainer.vue  MarketChart.vue  MarketData.vue  MarketElement.vue  MarketHeader.vue
web/src/pages/charts/: app.js  charts.vue
web/src/pages/index/: app.js  app.vue
