[package]
edition = "2018"
name = "solend-apy-bot"
version = "0.1.0"

[dependencies]
actix-files = "0.5.0"
actix-service = "2.0.0"
actix-web = "3.3.2"
config = "0.11.0"
chrono = "0.4.19"
clap = {version = "2.32", features = ["yaml"]}
dotenv = "0.15.0"
egg-mode = "0.16.0"
env_logger = "0.9.0"
failure = "0.1.8"
futures = "0.3.17"
headless_chrome = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
mongodb = "2.0.0"
reqwest = "0.11.5"
serde_json = "1.0"
solana-client = "1.7.14"
solana-sdk = "1.7.14"
serde = {version="1.0.130", features=["derive"]}
spl-token-lending = { git = "https://github.com/solendprotocol/solana-program-library" }
tokio = "1.12.0"